	  (openSimulator): removed intptr_t cast
	* debugger/mcs51/sdcdb.c: include <direct.h> for chdir(),
	  (parseCmdLine): access() is not portable, replaced with fopen/fclose,
	  (main): fixed bug 3137466
	* debugger/mcs51/sdcdb.h: include sdcc_vc.h or sdcccon.h
	* debugger/mcs51/sdcdb.dsp: new, added
	* sdcc.dsw: added sdcdb.dsp
	* sdas/asxxsrc/asmain.c (asmbl): error only if is_sdas()

2010-12-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as8051/i51adr.c,
	* sdas/as8051/i51ext.c,
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i51pst.c,
	* sdas/as8051/i8051.h,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asdbg.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/assubr.c,
	* sdas/asxxsrc/assym.c,
	* sdas/asxxsrc/asxxxx.h,
	* sdas/asxxsrc/sdas.c,
	* sdas/asxxsrc/strcmpi.c: cosmetic, replaced tabs with spaces
	* sdas/asxxsrc/asmain.c (asmbl): error on multiple mnemonics on one line
	* support/cpp/libcpp/include/cpplib.h: added PREV_NL
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes, cpp_output_line),
	* support/cpp/c-ppoutput.c (scan_translation_unit): fix macros w/o __asm
	* support/regression/tests/bug1505956.c: new, added

2010-12-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/cpp/c-ppoutput.c (scan_translation_unit): fix bug 1505956/1406219
	* support/cpp/libcpp/include/cpplib.h: added IN_ASM
	* support/cpp/libcpp/internal.h: added n__endasm to spec_nodes
	* support/cpp/libcpp/lex.c (_cpp_process_line_notes): return int in_asm on
	  continued inline asm lines,
	  (_cpp_lex_direct): set/reset in_asm flag,
	  (cpp_output_line): insert __endasm; __asm to fix bug 1505956/1406219
	* support/cpp/libcpp/macro.c (macro_real_token_count): fixed warning
	* support/cpp/sdcpp.c (sdcpp_init_options): init n__endasm

2010-12-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCCdwarf2.c, src/SDCCset.c, src/pic16/pcode.c:
	  fixed some defects, reported by Wipro DeepCheck static analysis tool
